--- a/o3po-asciidoc/.project
+++ b/o3po-asciidoc/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>o3po-asciidoc</name>
+	<name>07-O3PO-DOC</name>
 	<comment></comment>
 	<projects>
 	</projects>
