20180203T2015 - Asciidoc tree reorganisation

--- a/07-Asciidoc/pom.xml
+++ b/07-Asciidoc/pom.xml
@@ -3,7 +3,6 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>eu.europa.publicationsoffice.o3po</groupId>
-  <artifactId>o3po-asciidoc</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
@@ -52,4 +51,5 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  <artifactId>07-Asciidoc</artifactId>
 </project>
