--- a/07-Asciidoc/.project
+++ b/07-Asciidoc/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>07-O3PO-DOC</name>
+	<name>07-Asciidoc</name>
 	<comment></comment>
 	<projects>
 	</projects>
